fix injection attacks to logging